<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">AndroSS</string>
  <string name="ServiceStatusCheckBox_text">Aktivert?</string>
  <string name="PersistenceCheckBox_text">Forbli aktivert?</string>

  <string name="compression_text">Komprimeringsnivå:</string>
  <string-array name="compression_types">
    <item>PNG (best; treg)</item>
    <item>JPG HQ (90%; rask)</item>
    <item>JPG fast (40%; raskest)</item>
  </string-array>

  <string name="notifications_text">Vanlig varsel:</string>
  <string name="toast_notify_text">Meldingsvindu</string>
  <string name="audio_notify_text">Lyd</string>
  <string name="vibe_notify_text">Vibrering</string>

  <string name="triggers_text">Utløses på...</string>
  <string name="camera_button_trigger_text">Kameraknapp?</string>
  <string name="shake_trigger_text">Riste telefonen?</string>

  <string name="root_test_message_title">Sjekker etter root-tilgang</string>
  <string name="root_test_message">
               AndroSS trenger root-tilgang for å fungere, så la oss se om du har har det. 
               Dette er bare en enkel test, men hvis du godkjenner applikasjonen nå, vil du ikke
               bli spurt igjen.</string>
  <string name="root_test_message_neutral">La oss sjekke etter root-tilgang!</string>

  <string name="root_test_failed_message_title">Root testen feilet</string>
  <string name="root_test_failed_message">
               Something went wrong when trying to use su. AndroSS needs root to work correctly on
               your device. You can retry this check at any time from (More) Settings in the menu.
               \n\nIf you think this should have worked and you have a few minutes, please contact
               me through any method listed in this app\'s Market page.</string>
  <string name="root_test_failed_message_neutral">Darn! :(</string>

  <string name="more_settings_menu">(More) Settings</string>
  <string name="screenshot_dir_text">Save screenshots to:</string>
  <string name="screenshot_dir_prompt">Save to:</string>
  <string name="change_output_error">Cannot write to %s. Output directory unchanged.</string>
  <string name="su_path_text">Path to su:</string>
  <string name="su_path_prompt">su location:</string>
  <string name="change_su_error">Cannot use su at %s.</string>
  <string name="rotation_title">Rotate screenshots</string>
  <string name="rotation_summary">
               If checked, rotate according to screen orientation before saving. Disable this for
               slightly improved performance.</string>

  <string name="retry_root_check">Retry root check</string>
  <string name="goto_debug_prompt">Debug info</string>

  <string name="empty_param_error">AndroSS could not initialize - problem with su?</string>
  <string name="debug_info_error">AndroSS could not initialize or has not been initialized yet. Try checking enable in the main settings.</string>
  <string name="null_pixels_error">Something went horribly wrong! This is definitely a bug. :(</string>
  <string name="null_pixels_custom_su_error">Something went wrong! su is probably misconfigured.</string>

  <string name="board">Board:</string>
  <string name="framebuffer_info">Framebuffer parameters:</string>
  <string name="width_label">width</string>
  <string name="height_label">height</string>
  <string name="depth_label">depth</string>
  <string name="stride_label">stride</string>
  <string name="red">red</string>
  <string name="green">green</string>
  <string name="blue">blue</string>
  <string name="alpha">alpha</string>
  <string name="color_param">%1$s\t\t\t\t%2$s bits at offset %3$s</string>
</resources>

