<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/ll_debug_info"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">
  <TextView android:id="@+id/tv_board"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="7dip"
    android:paddingBottom="15dip"
    android:textSize="20dip"/>
  <TextView android:id="@+id/tv_framebuffer"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="7dip"
    android:paddingBottom="15dip"
    android:textSize="20dip"
    android:text="@string/framebuffer_info"/>
  <LinearLayout android:id="@+id/ll_dimensions"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="15dip"
    android:orientation="horizontal">
    <LinearLayout android:id="@+id/ll_width"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:orientation="vertical">
      <TextView android:id="@+id/tv_width_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16dip"
        android:text="@string/width_label"/>
      <TextView android:id="@+id/tv_width_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16dip"/>
    </LinearLayout>
    <LinearLayout android:id="@+id/ll_height"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:orientation="vertical">
      <TextView android:id="@+id/tv_height_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16dip"
        android:text="@string/height_label"/>
      <TextView android:id="@+id/tv_height_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16dip"/>
    </LinearLayout>
    <LinearLayout android:id="@+id/ll_depth"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:orientation="vertical">
      <TextView android:id="@+id/tv_depth_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16dip"
        android:text="@string/depth_label"/>
      <TextView android:id="@+id/tv_depth_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16dip"/>
    </LinearLayout>
    <LinearLayout android:id="@+id/ll_stride"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:orientation="vertical">
      <TextView android:id="@+id/tv_stride_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16dip"
        android:text="@string/stride_label"/>
      <TextView android:id="@+id/tv_stride_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16dip"/>
    </LinearLayout>
  </LinearLayout>
  <TextView android:id="@+id/tv_red"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="7dip"
      android:paddingBottom="7dip"
      android:textSize="16dip"/>
  <TextView android:id="@+id/tv_green"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="7dip"
      android:paddingBottom="7dip"
      android:textSize="16dip"/>
  <TextView android:id="@+id/tv_blue"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="7dip"
      android:paddingBottom="7dip"
      android:textSize="16dip"/>
  <TextView android:id="@+id/tv_alpha"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="7dip"
      android:paddingBottom="7dip"
      android:textSize="16dip"/>
</LinearLayout>
